CSS/styles.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

/* global styling */

body {
    font-family: "Lato", "Poppins", "Arial";
    font-size: 19.2px;
    background-color: #ffffff;
    line-height: 2;
    margin: 0;
    padding: 0;
}

img {
    max-width: 100%;
    border-radius: 10px;
}

h1,
h2 {
    font-family: "Poppins";
}

h1 {
    font-size: 40px;
}

h2 {
    font-size: 19.2px;
}

a {
    color: #ffffff;
    text-decoration: none;
}

a:hover {
    color: #d98555;
}

article {
    padding: 16px;
}

/*header*/

header {
    background-color: #082b59;
    border-bottom: 10px solid #d98555;
}

/* navbar */

nav {
    margin: 0 1rem;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav a {
    text-decoration: none;
    padding: 0.5rem 1rem;
    display: block;
    background-color: #082b59;
    color: #ffffff;
    margin: 0 0 2rem 0;
    text-align: center;
    font-size: 24px;
    font-weight: 300;
}

nav img {
    max-width: 200px;
}

nav .logo a {
    margin: 0;
}

/*links in main sections*/

.map,
.tel,
.product-link {
    color: #59331d;
    text-decoration: underline;
}

button {
    background-color: #59331d;
    border: none;
    color: white;
    text-align: center;
    padding: 1rem;
    border-radius: 7px;
    font-family: "Lato";
    font-weight: 300;
    font-size: 19.2px;
}

button a {
    text-decoration: none;
}

/*footer*/

footer {
    background-color: #082b59;
    text-align: center;
    margin: 0;
    padding-bottom: 48px;
}

footer p {
    color: #ffffff;
    margin: 0;
    font-weight: 300;
    padding: 8px;
}

.disclaimer {
    font-size: 16px;
    line-height: 2.5;
}


footer span {
    color: #ffffff;
    padding: 16px;
    font-size: 32px;
}


/* layout - mobile first! */
.container,
.products {
    max-width: 1200px;
    margin: 0 auto;
    padding: 1rem 1rem;
}

/*background img*/
.background {
    background: url("../media/gulp-bottom-beans.jpg");
    width: 100vw;
    height: 240px;
}

/*img in About, Contact, Home*/
.main-img,
.main-img-bike,
.main-img-home {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 32px;
    margin-bottom: 32px;
    width: 327px;
}

/* specific styling for products page */
.prodcontainer {
    max-width: 1200px;
    margin: 0 16px;
    padding: 1rem 1rem;
}

.prodcontainer img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 16px;
    width: 279px;
}




/*550px background / nav to horizontal under logo with flexbox */
@media (min-width: 550px) {
    .background {
        background: url("../media/gulp-bottom-beans.jpg");
        width: 100vw;
        height: 240px;
    }

    nav {
        margin-left: 0;
        padding-top: 16px;
    }

    nav ul {
        display: flex;
        flex-flow: row wrap;
        gap: 1rem;
        justify-content: center;
    }

    nav a {
        margin: 0 0 2rem 0;
    }

    .logo {
        flex-basis: 100%;
        text-align: center;
    }

    .main-img-bike {
        max-width: none !important;
    }
}

/*750px background /  vertical About img in css grid / prodcontainer for 2 columns */

@media (min-width: 750px) {
    .background {
        background: url("../media/gulp-bottom-beans.jpg");
        width: 100vw;
        height: 240px;
    }

    .container {
        display: grid;
        grid-template-columns: 2fr 1fr;
        margin: 0 2rem;
    }

    article {
        padding: 0;
        margin-right: 1rem;
    }

    /* Products page */
    .prodcontainer {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }

    .prodcontainer img {
        width: 303px;
    }

    .prodcontainer h2 {
        margin: 0;
    }

    /* Imgs*/
    .main-img {
        max-width: none !important;
        width: 269px;
        height: 436px;
        margin-top: 10rem;
    }

    .main-img-bike {
        width: auto;
        height: 321px;
        margin-top: 9rem;
    }

    .main-img-home {
        max-width: none !important;
        width: 302px;
        height: 201px;
        margin-top: 9rem;
    }

}


/*900px change nav bar to horizontal, responsive img to horizontal big in css grid & backgd image.
change prodcontainer for 3 columns*/
@media (min-width: 900px) {
    .background {
        background: url("../media/gulp-bottom-beans.jpg");
        width: 100vw;
        height: 240px;
    }

    nav ul {
        justify-content: flex-start;
    }

    nav a {
        margin-top: 5rem;
    }

    .logo {
        flex-basis: auto;
        margin-right: auto;
    }

    article {
        margin-right: 1rem;
    }

    .container img {
        max-width: none !important;
        width: 500px;
        height: 358px;
        margin-top: 10rem;
    }

    /* Products page */
    .prodcontainer {
        max-width: none !important;
        padding: 0;
        margin: 0;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 16px;
    }

    .prodcontainer img {
        width: 384px;
    }

    .blend {
        font-size: 17.6px;
        text-align: left;
        padding: 0;
    }

    h2 {
        font-size: 26.4px;
    }

}

